raffia/tests/error/scss/at-rule/forward/with-missing-dollar.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but `<ident>` received
  ┌─ with-missing-dollar.scss:1:24
  │
1 │ @forward "other" with (a);
  │                        ^


